crates/ty_python_semantic/resources/mdtest/snapshots/unresolved_import.md_-_Unresolved_import_di…_-_Using_`from`_with_an…_(9fa713dfa17cc404).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: unresolved_import.md - Unresolved import diagnostics - Using `from` with an unresolvable module
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unresolved_import.md
---

# Python source files

## mdtest_snippet.py

```
1 | from does_not_exist import add  # error: [unresolved-import]
2 | 
3 | stat = add(10, 15)
```

# Diagnostics

```
error[unresolved-import]: Cannot resolve imported module `does_not_exist`
 --> src/mdtest_snippet.py:1:6
  |
1 | from does_not_exist import add  # error: [unresolved-import]
  |      ^^^^^^^^^^^^^^
  |
info: Searched in the following paths during module resolution:
info:   1. /src (first-party code)
info:   2. vendored://stdlib (stdlib typeshed stubs vendored by ty)
info: make sure your Python environment is properly configured: https://docs.astral.sh/ty/modules/#python-environment

```
