crates/ty_python_semantic/resources/mdtest/snapshots/unresolved_reference…_-_Diagnostics_for_unre…_-_Typing_builtin_has_I…_-_Info_not_present_bef…_(41702a6f6d20b082).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: unresolved_reference.md - Diagnostics for unresolved references - Typing builtin has Info help - Info not present before Python 3.9
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unresolved_reference.md
---

# Python source files

## mdtest_snippet.py

```
1 | foo: List[int]  # error: [unresolved-reference]
2 | bar: Type  # error: [unresolved-reference]
```

# Diagnostics

```
error[unresolved-reference]: Name `List` used when not defined
 --> src/mdtest_snippet.py:1:6
  |
1 | foo: List[int]  # error: [unresolved-reference]
  |      ^^^^
  |

```

```
error[unresolved-reference]: Name `Type` used when not defined
 --> src/mdtest_snippet.py:2:6
  |
2 | bar: Type  # error: [unresolved-reference]
  |      ^^^^
  |

```
