crates/ty_python_semantic/resources/mdtest/snapshots/unresolved_reference…_-_Diagnostics_for_unre…_-_Typing_builtin_has_I…_-_Info_present_in_Pyth…_(1028a80959504fc9).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: unresolved_reference.md - Diagnostics for unresolved references - Typing builtin has Info help - Info present in Python 3.9+
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unresolved_reference.md
---

# Python source files

## mdtest_snippet.py

```
1 | foo: List[int]  # error: [unresolved-reference]
2 | bar: Type  # error: [unresolved-reference]
```

# Diagnostics

```
error[unresolved-reference]: Name `List` used when not defined
 --> src/mdtest_snippet.py:1:6
  |
1 | foo: List[int]  # error: [unresolved-reference]
  |      ^^^^ Did you mean `list`?
help: Replace with `list`
  |
  - foo: List[int]  # error: [unresolved-reference]
1 + foo: list[int]  # error: [unresolved-reference]
2 | bar: Type  # error: [unresolved-reference]
  |
note: This is an unsafe fix and may change runtime behavior

```

```
error[unresolved-reference]: Name `Type` used when not defined
 --> src/mdtest_snippet.py:2:6
  |
2 | bar: Type  # error: [unresolved-reference]
  |      ^^^^ Did you mean `type`?
help: Replace with `type`
  |
1 | foo: List[int]  # error: [unresolved-reference]
  - bar: Type  # error: [unresolved-reference]
2 + bar: type  # error: [unresolved-reference]
  |
note: This is an unsafe fix and may change runtime behavior

```
