crates/ty_python_semantic/resources/mdtest/snapshots/unsupported_base_dyn…_-_Unsupported_base_for…_-_`@final`_class_(ea69d237256b3762).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: unsupported_base_dynamic_type.md - Unsupported base for dynamic `type()` classes - `@final` class
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unsupported_base_dynamic_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import final
2 | 
3 | @final
4 | class FinalClass:
5 |     pass
6 | 
7 | X = type("X", (FinalClass,), {})  # error: [subclass-of-final-class]
```

# Diagnostics

```
error[subclass-of-final-class]: Class `X` cannot inherit from final class `FinalClass`
 --> src/mdtest_snippet.py:7:16
  |
7 | X = type("X", (FinalClass,), {})  # error: [subclass-of-final-class]
  |                ^^^^^^^^^^
  |

```
