crates/ty_python_semantic/resources/mdtest/snapshots/unsupported_base_dyn…_-_Unsupported_base_for…_-_`Protocol`_base_(99c9bde73664dd51).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: unsupported_base_dynamic_type.md - Unsupported base for dynamic `type()` classes - `Protocol` base
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unsupported_base_dynamic_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import Protocol
2 | 
3 | X = type("X", (Protocol,), {})  # error: [unsupported-dynamic-base]
```

# Diagnostics

```
info[unsupported-dynamic-base]: Unsupported base for class created via `type()`
 --> src/mdtest_snippet.py:3:16
  |
3 | X = type("X", (Protocol,), {})  # error: [unsupported-dynamic-base]
  |                ^^^^^^^^ Has type `<special-form 'typing.Protocol'>`
  |
info: Classes created via `type()` cannot be protocols
info: Consider using `class X(Protocol): ...` instead

```
