crates/ty_python_semantic/resources/mdtest/snapshots/unsupported_base_dyn…_-_Unsupported_base_for…_-_`TypedDict`_base_(6f76171c88fc8760).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: unsupported_base_dynamic_type.md - Unsupported base for dynamic `type()` classes - `TypedDict` base
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unsupported_base_dynamic_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing_extensions import TypedDict
2 | 
3 | X = type("X", (TypedDict,), {})  # error: [invalid-base]
```

# Diagnostics

```
error[invalid-base]: Invalid base for class created via `type()`
 --> src/mdtest_snippet.py:3:16
  |
3 | X = type("X", (TypedDict,), {})  # error: [invalid-base]
  |                ^^^^^^^^^ Has type `<special-form 'typing.TypedDict'>`
  |
info: Classes created via `type()` cannot be TypedDicts
info: Consider using `TypedDict("X", {})` instead

```
